--- a/bpr-miniprogram/pages/user/family/family.wxss
+++ b/bpr-miniprogram/pages/user/family/family.wxss
@@ -19,7 +19,7 @@
   padding: 3px 0px 0px 0px;
   margin: 5px 8px 5px 8px;
   /* border: 1px dashed black; */
-  background-color: rgb(219, 233, 205, 0) !important;
+  /* background-color: rgb(219, 233, 205, 0) !important; */
   /* background-image: linear-gradient(to right, rgba(175, 175, 175, 0.8) -6%, #ffffff, rgb(175, 175, 175, 0.8) 100%); */
 }
 
@@ -29,17 +29,17 @@
   /* border: 1px solid; */
   text-align: left !important;
   align-items: normal !important;
-  background-color: rgb(219, 233, 205, 0) !important;
+  /* background-color: rgb(219, 233, 205, 0) !important; */
   padding: var(--grid-item-content-padding,8px 16px) !important;
 }
 
 .grid-item-action-class {
-  padding-left: 5px !important;
-  padding-right: 5px !important;
+  padding-left: 12px !important;
+  padding-right: 12px !important;
   padding-top: 5px !important;
-  padding-bottom: 5px !important;
+  padding-bottom: 8px !important;
   /* border-top: 0.5pt dashed rgb(0, 0, 0); */
-  background-color: rgb(219, 233, 205, 0) !important;
+  /* background-color: rgb(219, 233, 205, 0) !important; */
 }
 
 .delete-family-one-button {
