--- a/bpr-miniprogram/pages/user/help/help.wxss
+++ b/bpr-miniprogram/pages/user/help/help.wxss
@@ -1,9 +1,24 @@
-/* pages/user/user.wxss */
-
-:root{
-  --van-cell-line-height: 50px;
+.title-cell-class .van-cell {
+  background-color: var(--cell-background-color, #f5f5f5);
+  font-weight: bold;
+  font-size: 18px;
+  color: #434343;
+  text-align: center;
+  padding: var(--cell-vertical-padding, 4px) var(--cell-horizontal-padding, 16px);
 }
 
-.van-cell {
-  line-height: var(--van-cell-line-height, 36px) !important;
+.content-cell-class .van-cell__value {
+  font-size: 15px;
+  color: #262626 !important;
+  text-align: left !important;
+  line-height: 26px;
+}
+
+.van-collapse-item__content {
+  padding: var(--collapse-item-content-padding, 0px) !important;
+}
+
+.subtitle-cell-class .van-cell__title {
+  font-size: 15px;
+  font-weight: 600;
 }
