fix(*): fix miniprogram login function

--- a/bpr-miniprogram/pages/add/add.wxss
+++ b/bpr-miniprogram/pages/add/add.wxss
@@ -1,4 +1,3 @@
-/* pages/add/add.wxss */
 page {
   line-height: 1.6;
   font-family: -apple-system-font, "Helvetica Neue", sans-serif;
@@ -1231,7 +1230,10 @@ page {
 }
 
 .van-cell {
-  padding: var(--cell-vertical-padding, 8px) var(--cell-horizontal-padding, 16px) !important;
+  font-size: 16px !important;
+  padding-left: 18px !important;
+  padding-right: 14px !important;
+  /* padding: var(--cell-vertical-padding, 8px) var(--cell-horizontal-padding, 14px) !important; */
 }
 
 .van-cell__value {
@@ -1240,4 +1242,11 @@ page {
 
 .van-button--normal {
   width: 60% !important;
+  font-size: var(--button-normal-font-size,18px) !important;
+}
+
+.van-button--small {
+  font-size: var(--button-small-font-size,16px) !important;
+  padding: 0 var(--padding-xs,10px) !important;
+  height: var(--button-small-height,34px) !important;
 }
