--- a/bpr-miniprogram/pages/user/family/family.wxss
+++ b/bpr-miniprogram/pages/user/family/family.wxss
@@ -65,6 +65,8 @@
   align-items: normal !important;
   padding: var(--grid-item-content-padding,8px 16px) !important;
   background-color: rgba(255, 255, 255, 1) !important;
+  font-size: 16px;
+  font-weight: bold;
 }
 
 .family-list-item-class {
@@ -91,4 +93,12 @@
 
 .grid-info-action-button {
   max-width: 20px !important;
+}
+
+.van-button--small {
+  font-size: var(--button-small-font-size,14px) !important;
+}
+
+.van-button--normal {
+  font-size: var(--button-normal-font-size,18px) !important;
 }
