--- a/bpr-miniprogram/pages/user/user.wxml
+++ b/bpr-miniprogram/pages/user/user.wxml
@@ -1,9 +1,10 @@
 <van-dialog id="van-dialog" />
+<van-toast id="van-toast" />
 
-<view style="height: 185px; background-image: url('../../images/background3.jpg'); background-size: 100%; background-position-y: center; text-align: center; vertical-align: middle; z-index: 10; ">
-  <view style="padding: 75px 5px 5px 5px;">
+<view style="height: 185px; background-image: url('/images/bg1.jpg'); background-size: 130%; background-position-y: center; background-position-x: center; text-align: center; vertical-align: middle; z-index: 10; ">
+  <view style="padding: 70px 5px 5px 5px;">
     <van-image round fit="fill" width="80px" height="80px" src="{{ userInfo.avatarUrl }}" wx:if="{{canIUseGetUserProfile}}" bind:click="getUserProfile" style="border: 1px; "/>
-    <span style="display:block">{{userInfo.nickName}}</span>
+    <span style="display:block; font-size: 18px; color: white;">{{userInfo.nickName}}</span>
   </view>
 </view>
 <view>
