--- a/bpr-miniprogram/pages/user/about/about.wxml
+++ b/bpr-miniprogram/pages/user/about/about.wxml
@@ -1,6 +1,5 @@
-<view style="height: 120px; background-image: url('/images/bg6.jpg'); background-size: 100%; background-position-y: center; background-position-x: center; text-align: center; vertical-align: middle; z-index: 10; ">
+<view class="background-class">
 </view>
-
 <van-cell class="content-cell-class" border="{{ false }}">
   <text decode="{{true}}" >
     &emsp;&emsp;本项目主要提供了血压和心率的记录、统计和分析服务，使用户能够方便快速地上传和查看自己的血压心率记录以及分析图表。同时，本项目提供了家庭管理服务，使用户可以查看同一个家庭中其他成员的血压心率记录情况。
